--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "better-auth": "^1.4.18",
+    "copy-to-clipboard": "^3.3.3",
+    "mongodb": "^7.1.0",
+    "mongoose": "^9.1.5",
+    "nes.css": "^2.2.1",
     "next": "16.1.5",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
